--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -123,7 +123,7 @@
                         <% end %>
                       </div>
 
-                      <div class="px-5 py-5 bg-gray-50 space-y-6 sm:flex sm:space-y-0 sm:space-x-10 sm:px-8">
+                      <div class="justify-center px-5 py-5 bg-gray-50 space-y-6 sm:flex sm:space-y-0 sm:space-x-10 sm:px-8">
 
                         <% external_links = {
                           Discord: { url: 'https://discord.gg/7tH7dWbQkH', icon: 'fab fa-discord' },
