List external links in menu (#236)
* List external links in menu

* Center

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,7 +23,7 @@
                     <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                       <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
                         <%= link_to events_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('calendar', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -33,7 +33,7 @@
                         <% end %>
 
                         <%= link_to beers_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('emoji-happy', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -43,7 +43,7 @@
                         <% end %>
 
                         <%= link_to users_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('user', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -53,7 +53,7 @@
                         <% end %>
 
                         <%= link_to groups_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('user-group', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -63,7 +63,7 @@
                         <% end %>
 
                         <%= link_to stickers_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('chip', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -73,7 +73,7 @@
                         <% end %>
 
                         <%= link_to recipe_index_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('beaker', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -83,7 +83,7 @@
                         <% end %>
 
                         <%= link_to meetings_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('chat-alt-2', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -93,7 +93,7 @@
                         <% end %>
 
                         <%= link_to trail_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('book-open', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -103,7 +103,7 @@
                         <% end %>
 
                         <%= link_to blogitems_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('pencil-alt', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
@@ -113,12 +113,30 @@
                         <% end %>
 
                         <%= link_to news_index_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                          <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                             <%= heroicon('rss', style: :outline, class_name: "h-6 w-6") %>
                           </div>
                           <div class="ml-4">
                             <p class="text-base font-medium text-gray-900">Nieuws</p>
                             <p class="mt-1 text-sm text-gray-500">Is er nog een nieuwtje?</p>
+                          </div>
+                        <% end %>
+                      </div>
+
+                      <div class="justify-center px-5 py-5 bg-gray-50 space-y-6 sm:flex sm:space-y-0 sm:space-x-10 sm:px-8">
+
+                        <% external_links = {
+                          Discord: { url: 'https://discord.gg/7tH7dWbQkH', icon: 'fab fa-discord' },
+                          'Google Drive': { url: 'https://drive.google.com/drive/folders/0AJQtnx7mawWRUk9PVA', icon: 'fab fa-google-drive' },
+                          Github: { url: 'https://github.com/dispuuthamers/', icon: 'fab fa-github' },
+                          Moneybird: { url: 'https://moneybird.com/275570381306201797', icon: 'fa fa-coins' }
+                        } %>
+
+                        <% external_links.each do |name, options| %>
+                          <div class="flow-root">
+                            <%= link_to options[:url], target: :blank, class: "-m-3 p-1 flex items-center rounded-md text-base font-medium text-gray-500 hover:bg-gray-100 transition ease-in-out duration-150" do %>
+                              <span class="m-1"><i class="fa-fw <%= options[:icon] %>"></i></span>
+                            <% end %>
                           </div>
                         <% end %>
                       </div>
@@ -144,7 +162,7 @@
                 <div class="overflow-hidden">
                   <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
                     <%= link_to current_user, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                         <%= heroicon('user-circle', style: :outline, class_name: "h-6 w-6") %>
                       </div>
 
@@ -155,7 +173,7 @@
                     <% end %>
 
                     <%= link_to edit_user_path(current_user), class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                         <%= heroicon('pencil', style: :outline, class_name: "h-6 w-6") %>
                       </div>
 
@@ -166,7 +184,7 @@
                     <% end %>
 
                     <%= link_to oauth_authorized_applications_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                         <%= heroicon('lock-closed', style: :outline, class_name: "h-6 w-6") %>
                       </div>
 
@@ -177,7 +195,7 @@
                     <% end %>
 
                     <%= link_to destroy_user_session_path, method: 'delete', class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                      <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                         <%= heroicon('logout', style: :outline, class_name: "h-6 w-6") %>
                       </div>
 
@@ -205,7 +223,7 @@
               <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                 <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 grid-cols-2">
                   <%= link_to events_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('calendar', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -214,7 +232,7 @@
                   <% end %>
 
                   <%= link_to beers_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('emoji-happy', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -223,7 +241,7 @@
                   <% end %>
 
                   <%= link_to users_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('user', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -232,7 +250,7 @@
                   <% end %>
 
                   <%= link_to groups_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('user-group', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -241,7 +259,7 @@
                   <% end %>
 
                   <%= link_to stickers_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('chip', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -250,7 +268,7 @@
                   <% end %>
 
                   <%= link_to recipe_index_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('beaker', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -259,7 +277,7 @@
                   <% end %>
 
                   <%= link_to meetings_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('chat-alt-2', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -268,7 +286,7 @@
                   <% end %>
 
                   <%= link_to trail_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('book-open', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -277,7 +295,7 @@
                   <% end %>
 
                   <%= link_to blogitems_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('pencil-alt', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -286,7 +304,7 @@
                   <% end %>
 
                   <%= link_to news_index_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('rss', style: :outline, class_name: "h-6 w-6") %>
                     </div>
                     <div class="ml-4">
@@ -311,7 +329,7 @@
               <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                 <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 grid-cols-2">
                   <%= link_to current_user, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('user-circle', style: :outline, class_name: "h-6 w-6") %>
                     </div>
 
@@ -321,7 +339,7 @@
                   <% end %>
 
                   <%= link_to edit_user_path(current_user), class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('pencil', style: :outline, class_name: "h-6 w-6") %>
                     </div>
 
@@ -331,7 +349,7 @@
                   <% end %>
 
                   <%= link_to oauth_authorized_applications_path, class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('lock-closed', style: :outline, class_name: "h-6 w-6") %>
                     </div>
 
@@ -341,7 +359,7 @@
                   <% end %>
 
                   <%= link_to destroy_user_session_path, method: 'delete', class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
-                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-red-600 text-white sm:h-12 sm:w-12">
+                    <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                       <%= heroicon('logout', style: :outline, class_name: "h-6 w-6") %>
                     </div>
 
