--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -1,35 +1,72 @@
-<table class="tablesorter table table-hover">
-  <thead>
-  <tr>
-    <th>Naam</th>
-    <th>Aantal quotes</th>
-    <th>Aantal reviews</th>
-    <th>Gemiddeld cijfer</th>
-    <% if ratio %>
-      <th>Sunday Ratio</th>
-    <% end %>
-  </tr>
-  </thead>
-  <tbody>
-  <% users.each do |user| %>
-    <tr>
-      <td><%= gravatar_for user, size: 52 %>
-        <%= link_to user.name, user %>
-      </td>
-      <td><%= user.quotes.count %></td>
-      <td><%= user.reviews.count %></td>
+<% if users.any? %>
+  <div class="flex flex-col mt-6">
+    <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+      <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+          <table class="min-w-full divide-y divide-gray-200">
+            <thead class="bg-gray-100">
+            <tr>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Naam
+              </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Groepen
+              </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Lichting
+              </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Quotes
+              </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Reviews
+              </th>
+              <th scope="col" class="relative px-6 py-3">
+                <span class="sr-only">Link</span>
+              </th>
+            </tr>
+            </thead>
+            <tbody class="bg-white divide-y divide-gray-200">
 
-      <% if user.weight %>
-        <td><%= user.weight.round(2) %></td>
-      <% else %>
-        <td>Nog onbekend</td>
-      <% end %>
-      <% if ratio %>
-        <td>
-          <%= user.sunday_ratio.round(2) %>%
-        </td>
-      <% end %>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+            <% users.each do |user| %>
+              <tr>
+                <td class="px-6 py-4 whitespace-nowrap">
+                  <div class="flex items-center">
+                    <div class="flex-shrink-0 h-10 w-10">
+                      <%= gravatar_for user, class: "h-10 w-10 rounded-full", alt: "user.name" %>
+                    </div>
+                    <div class="ml-4">
+                      <div class="text-sm font-medium text-gray-900"><%= user.name %></div>
+                      <div class="text-sm text-gray-500"><%= user.email %></div>
+                    </div>
+                  </div>
+                </td>
+                <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
+                  <%= user.usergroups.pluck(:name).to_sentence %>
+                </td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                  <%= user.batch %>
+                </td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                  <%= user.quotes.count %>
+                </td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                  <%= user.reviews.count %>
+                </td>
+                <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                  <%= link_to user, class: "float-right" do %>
+                    <%= heroicon('chevron-right', class_name: "flex-shrink-0 h-5 w-5 text-gray-400") %>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+<% else %>
+  Geen data beschikbaar.
+<% end %>
