random layout fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body class="h-full">
-    <div class="bg-gray-100 h-full">
+    <div class="bg-gray-100 min-h-screen h-full">
       <div class="bg-gray-800 pb-32">
         <%= render 'layouts/nav' %>
 
@@ -26,7 +26,7 @@
       </div>
 
       <main class="-mt-32">
-        <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="bg-white rounded-lg shadow px-5 py-6 sm:px-6">
             <%= yield %>
           </div>
