--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white overflow-hidden md:shadow md:rounded-lg hidden md:block">
-  <div class="px-5 h-full">
+  <div class="px-5 mx-5 h-full">
     <h2 class="text-indigo-400 text-xl font-extrabold my-2">Biertje van de pageload</h2>
     <div class="flex justify-center h-full">
       <% if @random_beer %>
