--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,7 +16,7 @@
     </div>
     <div class="relative flex justify-center">
       <span class="px-2 bg-white text-sm text-gray-500">
-        Quotes
+        Citaten
       </span>
     </div>
   </div>
