--- a/app/views/shared/_blog.html.erb
+++ b/app/views/shared/_blog.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white overflow-hidden shadow rounded-lg hidden md:block">
-  <div class="px-5">
+  <div class="px-5 mx-5">
     <%= link_to blogitems_path do %>
       <h2 class="text-indigo-400 text-xl font-extrabold my-2">Blogposts</h2>
     <% end %>
