--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -3,17 +3,17 @@
     <div class="flex items-center">
       <div class="ml-5 w-0 flex-1">
         <div class="w-full mx-auto px-4 sm:px-6 lg:px-8">
-          <h2 class="text-xl font-extrabold tracking-tight text-gray-900 sm:text-2xl">
+          <h2 class="text-xl font-extrabold tracking-tight text-gray-900">
             <span class="block">Welkom <%= current_user.name %></span>
           </h2>
-            <span class="block font-extrabold">
-              Je bent <span class="text-indigo-400"><%= current_user.quotes.count %></span> keer geciteerd,
-              hebt <span class="text-indigo-400"><%= current_user.reviews.count %></span> biertjes gereviewd,
-              <span class="text-indigo-400"><%= current_user.blogitems.count %></span> blogs geschreven en
-              bent bij <span
-                class="text-indigo-400"><%= Signup.where(event_id: Event.where(attendance: true).pluck(:id), user: current_user).count %></span>
-                borrels geweest.
-              </span>
+          <span class="block font-extrabold">
+            Je bent <span class="text-indigo-400"><%= current_user.quotes.count %></span> keer geciteerd,
+            hebt <span class="text-indigo-400"><%= current_user.reviews.count %></span> biertjes gereviewd,
+            <span class="text-indigo-400"><%= current_user.blogitems.count %></span> blogs geschreven en
+            bent bij <span
+              class="text-indigo-400"><%= Signup.where(event_id: Event.where(attendance: true).pluck(:id), user: current_user).count %></span>
+            borrels geweest.
+          </span>
         </div>
       </div>
     </div>
